<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/activity_options"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkGreen"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.candyz.a7center.OptionsActivity">

    <LinearLayout android:id="@+id/row1"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:weightSum="3">

        <TextView android:id="@+id/input_name_label"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:text="@string/input_name"
                  android:textColor="#FFFFFF">

        </TextView>

        <EditText android:id="@+id/input_name"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content" android:layout_weight="2"
                  android:hint="@string/input_name"
                  android:textColor="#FFFFFF"/>
    </LinearLayout>

    <LinearLayout android:id="@+id/row2"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_below="@+id/row1"
                  android:orientation="horizontal"
                  android:weightSum="3">

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:text="@string/input_number"
                  android:textColor="#FFFFFF"
        >
        </TextView>
        <EditText android:id="@+id/input_number"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content" android:layout_weight="2"
                  android:hint="@string/input_number"
                  android:textColor="#FFFFFF"/>


    </LinearLayout>

    <LinearLayout android:id="@+id/row3"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_below="@+id/row2"
                  android:orientation="horizontal"
                  android:weightSum="3">

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:text="@string/input_photo"
                  android:textColor="#FFFFFF"
        >
        </TextView>
        <ImageView android:id="@+id/input_image"
                  android:layout_width="64dp"
                  android:layout_height="64dp"
                   android:text="@string/input_photo"
                  android:hint="@string/input_number"/>


    </LinearLayout>

    <LinearLayout android:id="@+id/row4"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_below="@+id/row3"
                  android:orientation="horizontal"
                  android:weightSum="3">


        <CheckBox android:id="@+id/play_automatic"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textColorHint="#FFFFFF"
                  android:hint="@string/play_automatic_hint"/>


    </LinearLayout>

    <LinearLayout android:id="@+id/row5"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_below="@+id/row4"
                  android:orientation="horizontal"
                  android:weightSum="3">


        <CheckBox android:id="@+id/pass_automatic"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                  android:textColorHint="#FFFFFF"
                   android:hint="@string/pass_automatic_hint"/>


    </LinearLayout>

    <Button android:id="@+id/accept_detais" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/row5"
            android:layout_centerHorizontal="true"
            android:text="@string/basic_details_accept"/>


</RelativeLayout>
