<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/activity_basic_details"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkGreen"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.candyz.a7center.BasicDetailsActivity">

    <LinearLayout android:id="@+id/name_row"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:weightSum="3">

        <TextView android:id="@+id/input_name_label"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:text="@string/input_name"
                  android:textColor="#FFFFFF">

        </TextView>

        <EditText android:id="@+id/input_name"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content" android:layout_weight="2"
                  android:hint="@string/input_name"
                  android:textColor="#FFFFFF"/>
    </LinearLayout>

    <LinearLayout android:id="@+id/number_row"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_below="@+id/name_row"
                  android:orientation="horizontal"
                  android:weightSum="3">

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:text="@string/input_number"
                  android:textColor="#FFFFFF"
        >
        </TextView>
        <EditText android:id="@+id/input_number"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content" android:layout_weight="2"
                  android:hint="@string/input_number"
                  android:textColor="#FFFFFF"/>


    </LinearLayout>

    <Button android:id="@+id/accept_detais" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/number_row"
            android:layout_centerHorizontal="true"
            android:text="@string/basic_details_accept"/>


</RelativeLayout>
